spacing bug fixed

--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -53,7 +53,6 @@ h2 {
 .flex {
   display: flex;
   justify-content: center;
-  gap: 6px;
 }
 p, i {
   text-align: center;
